--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "serverless-sqs-alarms-plugin",
   "description": "Serverless plugin to to configure CloudWatch alarms for SQS queues",
   "main": "src/plugin.js",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "author": "Sebastian Müller <mail@sbstjn.com>",
   "license": "MIT",
   "scripts": {
@@ -28,6 +28,9 @@
     "jest": "^19.0.2",
     "snazzy": "^6.0.0",
     "standard": "^9.0.2"
+  },
+  "peerDependencies": {
+    "serverless": "3"
   },
   "standard": {
     "envs": [
